[gd_scene load_steps=38 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PlayerSM.gd" type="Script" id=2]
[ext_resource path="res://Assets/CosmicLilac_AnimatedSpriteSheet.png" type="Texture" id=3]
[ext_resource path="res://Scripts/ScreenShake.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://SFX/laserShoot.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/hitHurt.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.5, 31 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 48, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 80, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 64, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 80, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 96, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 48, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 80, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 16, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 48, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 64, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 80, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 96, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 28 ), SubResource( 29 ), SubResource( 28 ), SubResource( 30 ) ],
"loop": false,
"name": "Death",
"speed": 6.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "WalkDown",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "WalkSide",
"speed": 6.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "WalkUp",
"speed": 6.0
} ]

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="AnimatedSprite2D" type="AnimatedSprite" parent="StateMachine"]
position = Vector2( 1, 0.499997 )
scale = Vector2( 3.875, 3.9375 )
frames = SubResource( 2 )
animation = "Idle"
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 5 )

[node name="ScreenShake" type="Node" parent="Camera2D"]
script = ExtResource( 4 )

[node name="ShakeTween" type="Tween" parent="Camera2D/ScreenShake"]

[node name="Frequency" type="Timer" parent="Camera2D/ScreenShake"]

[node name="Duration" type="Timer" parent="Camera2D/ScreenShake"]
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Control" parent="." instance=ExtResource( 6 )]
margin_left = 21.0
margin_top = -2.0
margin_right = 21.0
margin_bottom = 78.0

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="damage" from="." to="Camera2D" method="_on_Player_damage"]
[connection signal="health_updated" from="." to="Control" method="_on_Player_health_updated"]
[connection signal="timeout" from="Camera2D/ScreenShake/Frequency" to="Camera2D/ScreenShake" method="_on_Frequency_timeout"]
[connection signal="timeout" from="Camera2D/ScreenShake/Duration" to="Camera2D/ScreenShake" method="_on_Duration_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
